A server-reflexive candidate is discarded when the host IPv4 address is public and obfuscated by using mDNS
Categories
(Core :: WebRTC: Networking, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox110 | --- | fixed |
People
(Reporter: gorisanson, Assigned: gorisanson)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:94.0) Gecko/20100101 Firefox/94.0
Steps to reproduce:
- Connect to the Internet directly with a public IP (behind no NAT)
- Open the Trickle ICE sample page: https://webrtc.github.io/samples/src/content/peerconnection/trickle-ice/
- Click "Gather candidates"
Actual results:
A server-reflexive candidate was not provided.
Expected results:
A server-reflexive candidate should be provided.
| Assignee | ||
Comment 1•4 years ago
|
||
A server-reflexive (srflx) candidate is discarded when the host IPv4 address is public and obfuscated by using mDNS.
According to https://www.rfc-editor.org/rfc/rfc8445#section-5.1.3, the srflx candidate is considered redundant and eliminated when the host address is public (and not obfuscated). In this case, WebRTC P2P connection can be achieved since the host address is public and the same as the srflx candidate address.
However, when the host address is both public and obfuscated by using mDNS, according to https://datatracker.ietf.org/doc/html/draft-ietf-mmusic-mdns-ice-candidates-02#section-3.1.2.2, a srflx candidate MUST NOT be considered redundant and so must not be eliminated. But, it seems that Firefox eliminates the srflx candidate when the host address is both public and obfuscated.
| Assignee | ||
Comment 2•4 years ago
|
||
It seems that it is related to: https://bugzilla.mozilla.org/show_bug.cgi?id=1742009
And here is the related Stack Overflow question which I posted about one and a half years ago: https://stackoverflow.com/q/61629450/8581025
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
It seems that Safari and Chrome have the same bug now.
For your information, the links of the bug reports are at the following.
Webkit: https://bugs.webkit.org/show_bug.cgi?id=233414
Chromium: https://bugs.chromium.org/p/webrtc/issues/detail?id=13426
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Comment 5•4 years ago
|
||
The component has been changed since the backlog priority was decided, so we're resetting it.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 6•3 years ago
|
||
This bug is fixed by the patch in upstream:
https://webrtc.googlesource.com/src/+/7eea6672285f765599fd883a5737f5cae8d20917
And the patch begins to be applied on Chromium with version 110.0.5452.0.
| Assignee | ||
Comment 7•3 years ago
|
||
Fix so that srflx candidates are not discarded if host address
obfuscation is enabled.
Updated•3 years ago
|
Comment 8•3 years ago
|
||
Comment 9•3 years ago
|
||
Try looks normal.
Comment 10•3 years ago
|
||
Comment 11•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Description
•