Bug 1742337 - Fix discarding of srflx candidates r=webrtc-reviewers,bwc

If host address obfuscation (media.peerconnection.ice.obfuscate_host_addresses)
is enabled, a srflx candidate "MUST NOT be considered redundant" even if
its IP address is the same as the local IP address.

Reference:
https://datatracker.ietf.org/doc/html/draft-ietf-mmusic-mdns-ice-candidates-03#section-3.1.2.2

Differential Revision: https://phabricator.services.mozilla.com/D164639