dom/media/webrtc/transport/third_party/nICEr/src/ice/ice_candidate.h
@@ -65,7 +65,6 @@ struct nr_ice_candidate_ {
   nr_transport_addr addr;             /* The advertised address;
                                          JDR calls this the candidate */
   nr_transport_addr base;             /* The base address (S 2.1)*/
-  int obfuscate_addrs;                /* True if addresses should be obfuscated */
   char *mdns_addr;                    /* MDNS address, if any */
   char *foundation;                   /* Foundation for the candidate (S 4) */
   UINT4 priority;                     /* The priority value (S 5.4 */
