dom/media/webrtc/transport/third_party/nICEr/src/ice/ice_ctx.h
@@ -146,9 +146,10 @@ int nr_ice_ctx_create_with_credentials(char *label, UINT4 flags, char* ufrag, ch
 #define NR_ICE_CTX_FLAGS_AGGRESSIVE_NOMINATION             (1)
 #define NR_ICE_CTX_FLAGS_LITE                              (1<<1)
 #define NR_ICE_CTX_FLAGS_RELAY_ONLY                        (1<<2)
-#define NR_ICE_CTX_FLAGS_HIDE_HOST_CANDIDATES              (1<<3)
+#define NR_ICE_CTX_FLAGS_DISABLE_HOST_CANDIDATES           (1<<3)
 #define NR_ICE_CTX_FLAGS_ONLY_DEFAULT_ADDRS                (1<<4)
 #define NR_ICE_CTX_FLAGS_ONLY_PROXY                        (1<<5)
+#define NR_ICE_CTX_FLAGS_OBFUSCATE_HOST_ADDRESSES          (1<<6)
 
 void nr_ice_ctx_add_flags(nr_ice_ctx *ctx, UINT4 flags);
 void nr_ice_ctx_remove_flags(nr_ice_ctx *ctx, UINT4 flags);
